--- a/2016-08-27-python-and-sqlite3-interaction.org
+++ b/2016-08-27-python-and-sqlite3-interaction.org
@@ -117,7 +117,7 @@ sqlite>
 
    With no doubt it's a comprehensive list of commands and feel free
    to review it in a much precise manner. This interaction through
-   native SQLite3 shell allows you to do any kind of stuff in a manual
+   native SQLite3 shell allows you all possible operations in a manual
    mode, but our goal is to reach much literate level of interaction.
    We take an attempt to include and intersect emacs org-mode
    documents, SQLite3 tables and Python flexibility.
