--- a/2016-09-09-python-standard-library.org
+++ b/2016-09-09-python-standard-library.org
@@ -15,66 +15,73 @@ tags: [tutorial, stdlib, testing]
 * Preamble
 
 * Methodology
-  This is a template for testing Python standard library:
-  #+BEGIN_SRC python :noweb yes :session stdlib :tangle tests/test_stdlib.py
-  """Discover how it works by testing it all"""
 
-  <<first-test-class>>
+** Template
+   Lets create a mold for pouring by the test suits:
+   
+   #+BEGIN_SRC python :noweb yes :tangle tests/test_built-in_constants.py
+   """Discover how it works by testing"""
+   <<import-header>>
 
-  <<second-test-class>>
 
-  <<third-test-class>>
+   <<built-in-constants-test>>
+
+   <<second-test-class>>
+
+   <<third-test-class>>
+   #+END_SRC
+
+   #+RESULTS:
+   : Discover how it works by testing it all
+
+** Necessary imports
+   #+NAME: import-header
+   #+BEGIN_SRC python
+   import unittest
+   #+END_SRC
+
+** Test suits
+   #+NAME: built-in-constants-test
+   #+BEGIN_SRC python
+     class TestBuiltInConstants(unittest.TestCase):
+
+         def test_true(self):
+             self.assertTrue(1 + 3 == 4)
+
+         def test_false(self):
+             self.assertFalse(1 + 4 == 4)
+
+         def test_none(self):
+             value = None
+             self.assertIsNone(value)
+   #+END_SRC
+
+   #+RESULTS: first-test-class
+   : None
+
+   #+NAME: second-test-class
+   #+BEGIN_SRC python
   
-  #+END_SRC
+   #+END_SRC
 
-  #+RESULTS:
-  : Discover how it works by testing it all
-
-* Test suits
-  #+NAME: first-test-class
-  #+BEGIN_SRC python
-    import unittest
-
-
-    class TestGeneric(unittest.TestCase):
-
-        def test_true(self):
-            self.assertTrue(1 + 3 == 4)
-
-        def test_false(self):
-            self.assertFalse(1 + 4 == 4)
-
-        def test_none(self):
-            value = None
-            self.assertIsNone(value)
-  #+END_SRC
-
-  #+RESULTS: first-test-class
-  : None
-
-  #+NAME: second-test-class
-  #+BEGIN_SRC python
+   #+NAME: third-test-class
+   #+BEGIN_SRC python
   
-  #+END_SRC
+   #+END_SRC
 
-  #+NAME: third-test-class
-  #+BEGIN_SRC python
-  
-  #+END_SRC
+** Test runner
+   #+BEGIN_SRC sh :results output :exports both
+     python -m unittest -v tests/test_built-in_constants.py 2>&1
 
-* Test runner
-  #+BEGIN_SRC sh :results output :exports both
-    python -m unittest -v tests/test_stdlib.py 2>&1
+   #+END_SRC
 
-  #+END_SRC
-
-  #+RESULTS:
-  : test_false (tests.test_stdlib.TestGeneric) ... ok
-  : test_none (tests.test_stdlib.TestGeneric) ... ok
-  : test_true (tests.test_stdlib.TestGeneric) ... ok
-  : 
-  : ----------------------------------------------------------------------
-  : Ran 3 tests in 0.000s
-  : 
-  : OK
+   #+RESULTS:
+   : test_false (tests.test_built-in_constants.TestBuiltInConstants) ... ok
+   : test_none (tests.test_built-in_constants.TestBuiltInConstants) ... ok
+   : test_true (tests.test_built-in_constants.TestBuiltInConstants) ... ok
+   : 
+   : ----------------------------------------------------------------------
+   : Ran 3 tests in 0.001s
+   : 
+   : OK
 
