Couple assertRaises there

--- a/2016-09-13-python-built-in-functions.org
+++ b/2016-09-13-python-built-in-functions.org
@@ -124,6 +124,17 @@ tags: [built-in functions, unittest]
 
          def test_one_value_is_empty_string(self):
              self.assertFalse(all(["", "Empty"]))
+
+         def test_string_as_argument(self):
+             self.assertTrue(all('l') and all('low') and all('at the'))
+
+         def test_non_iter_argument(self):
+             self.assertRaises(TypeError, lambda x: all(11))
+
+         # assertRaises(exception, callable, *args, **kwds)
+    
+         def test_bool_argument(self):
+             self.assertRaises(TypeError, lambda x: all(True))
    #+END_SRC
     
 
@@ -143,13 +154,16 @@ tags: [built-in functions, unittest]
    test_all_values_are_negative (tests.test_built-in_functions.TestAll) ... ok
    test_all_values_are_positive_numbers (tests.test_built-in_functions.TestAll) ... ok
    test_all_values_are_strings (tests.test_built-in_functions.TestAll) ... ok
+   test_bool_argument (tests.test_built-in_functions.TestAll) ... ok
+   test_non_iter_argument (tests.test_built-in_functions.TestAll) ... ok
    test_one_value_is_empty_string (tests.test_built-in_functions.TestAll) ... ok
    test_one_value_is_zero (tests.test_built-in_functions.TestAll) ... ok
    test_single_element_is_None (tests.test_built-in_functions.TestAll) ... ok
    test_single_element_is_false (tests.test_built-in_functions.TestAll) ... ok
+   test_string_as_argument (tests.test_built-in_functions.TestAll) ... ok
 
    ----------------------------------------------------------------------
-   Ran 9 tests in 0.001s
+   Ran 12 tests in 0.002s
 
    OK
 #+end_example
