Bin() built-in function tests

--- a/2016-09-13-python-built-in-functions.org
+++ b/2016-09-13-python-built-in-functions.org
@@ -88,6 +88,18 @@ tags: [built-in functions, unittest]
 
 
    <<ascii-test-suite>>
+
+
+   <<bin-test-suite>>
+
+
+   <<bool-test-suite>>
+
+
+   <<bytearray-test-suite>>
+
+
+   <<bytes-test-suite>>
    #+END_SRC   
 
 
@@ -220,6 +232,43 @@ tags: [built-in functions, unittest]
           #                      "{'second': 2, 'first': 1}")
     #+END_SRC
 
+*** bin()
+    #+NAME: bin-test-suite
+    #+BEGIN_SRC python
+      class TestBin(unittest.TestCase):
+
+          def test_integer_argument(self):
+              self.assertEqual(bin(16), '0b10000')
+
+          def test_integer_negative(self):
+              self.assertEqual(bin(-16), '-0b10000')
+
+          def test_string_as_argument(self):
+              self.assertRaises(TypeError, lambda x: bin("A"))
+
+          def test_float_as_argument(self):
+              self.assertRaises(TypeError, lambda x: bin(16.3))
+    #+END_SRC
+
+*** bool()
+    #+NAME: bool-test-suite
+    #+BEGIN_SRC python
+      class TestBool(unittest.TestCase):
+
+          def test_numeric_argument(self):
+              self.assertTrue(bool(1) and bool(-2))
+
+          def test_zero_or_false_argument(self):
+              self.assertFalse(bool(0) and bool(False))
+
+          def test_string_as_argument(self):
+              self.assertTrue(bool("Abc"))
+
+          def test_mixed_arguments(self):
+              self.assertTrue(bool(["A", False]))
+    #+END_SRC
+
+
 ** Test runner
    Accustomed unittest as Python module:
 
@@ -230,9 +279,9 @@ tags: [built-in functions, unittest]
    #+END_SRC
 
    #+RESULTS:
-   : ......................
+   : ..............................
    : ----------------------------------------------------------------------
-   : Ran 22 tests in 0.002s
+   : Ran 30 tests in 0.005s
    : 
    : OK
 
