--- a/2016-09-13-python-built-in-functions.org
+++ b/2016-09-13-python-built-in-functions.org
@@ -321,7 +321,27 @@ tags: [built-in functions, unittest]
               self.seq.clear()
     #+END_SRC
 
+*** bytes()
+    #+NAME: bytes-test-suite
+    #+BEGIN_SRC python
+      class TestBytes(unittest.TestCase):
+          """By definition it is an immutable byte sequence"""
 
+          def setUp(self):
+              self.seq = bytes([0x13, 0x00, 0x00, 0x07, 0x08, 0x00])
+
+          def test_count(self):
+              self.assertEqual(self.seq.count(0, 2), 2)
+
+          def test_find_bytes(self):
+              self.assertEqual(self.seq.find(7), 3)
+
+          def test_index(self):
+              self.assertRaises(ValueError, lambda: self.seq.index(11))
+
+          def test_is_digit(self):
+              self.assertFalse(self.seq.isalnum())
+    #+END_SRC
 ** Test runner
    Accustomed unittest as Python module:
 
@@ -332,9 +352,9 @@ tags: [built-in functions, unittest]
    #+END_SRC
 
    #+RESULTS:
-   : ...................................
+   : .......................................
    : ----------------------------------------------------------------------
-   : Ran 35 tests in 0.004s
+   : Ran 39 tests in 0.004s
    : 
    : OK
 
