Testing template extension

--- a/2016-09-13-python-built-in-functions.org
+++ b/2016-09-13-python-built-in-functions.org
@@ -124,6 +124,21 @@ tags: [built-in functions, unittest]
 
 
    <<bytes-test-suite>>
+
+
+   <<callable-test-suite>>
+
+
+   <<chr-test-suite>>
+
+
+   <<classmethod-test-suite>>
+
+
+   <<compile-test-suite>>
+
+
+   <<complex-test-suite>>
    #+END_SRC   
 
 
