--- a/2016-09-13-python-built-in-functions.org
+++ b/2016-09-13-python-built-in-functions.org
@@ -360,6 +360,29 @@ tags: [built-in functions, unittest]
               self.assertFalse(self.seq.isalnum())
     #+END_SRC
 
+*** callable()
+    #+NAME: callable-test-suite
+    #+BEGIN_SRC python
+      class TestCallable(unittest.TestCase):
+
+          def sample_function():
+              return True
+
+          def test_anonimous_function(self):
+              self.assertTrue(callable(lambda: 3 + 2))
+
+          def test_built_in_function(self):
+              self.assertFalse(callable(abs(2)))
+
+          def test_string_as_argument(self):
+              self.assertFalse(callable("Ismael"))
+
+          def test_numeric_argument(self):
+              self.assertFalse(callable(2))
+
+          def test_sample_function(self):
+              self.assertTrue(self.sample_function)
+    #+END_SRC
 ** Test runner
    Accustomed unittest as Python module:
 
@@ -370,9 +393,9 @@ tags: [built-in functions, unittest]
    #+END_SRC
 
    #+RESULTS:
-   : .......................................
+   : ............................................
    : ----------------------------------------------------------------------
-   : Ran 39 tests in 0.007s
+   : Ran 44 tests in 0.006s
    : 
    : OK
 
